solved issue of tags too long to be displyaed by reducing img size

--- a/frontend/src/components/Card.css
+++ b/frontend/src/components/Card.css
@@ -36,6 +36,12 @@
   gap: 8px;
   flex-wrap: wrap;
 }
+
+/* display only two first spans in cards-tags
+.cards-tags span:nth-child(n + 3) {
+  display: none;
+} */
+
 .cards-tag {
   font-size: 0.5rem;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
